--- a/arch/arm/configs/aries_galaxysbmtd_defconfig
+++ b/arch/arm/configs/aries_galaxysbmtd_defconfig
@@ -125,7 +125,7 @@ CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
 #
 
-# CONFIG_DVFS_LIMIT is not set
+CONFIG_DVFS_LIMIT=y
 CONFIG_VFP=y
 CONFIG_NEON=y
 CONFIG_BINFMT_MISC=y
